# vulkanC

./: CMakeLists.txt
assets/: consolas.fnt
shaders/: shader.frag  shader.fragout.spv  shader.vert  shader.vertout.spv  text.frag  text.fragout.spv  text.vert  text.vertout.spv
src/: buffer.c  buffer.h  command_pool.c  command_pool.h  descriptor.c  descriptor.h  device.c  device.h  font.c  font.h  font_parse.c  main.c  pipeline.c  pipeline.h  pipeline_meta.c  pipeline_meta.h  renderer.c  renderer.h  swapchain.c  swapchain.h  texture.c  texture.h  vec_types.h  vmath.h  window.c  window.h
